--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>groupId</groupId>
     <artifactId>JPBC</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <!--消息队列-->
     <!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-core -->
     <dependencies>
         <dependency>
